class ContatoEmergencia:
    def _init_(self, nome_familiar, telefone_familiar, parentesco, tipo_sanguineo_familiar):
        self._parentesco = parentesco
        self._telefone_familiar = telefone_familiar
        self._nome_familiar = nome_familiar
        self._tipo_sanguineo_familiar = tipo_sanguineo_familiar