class Dados:
    def _init_(self, tipo_sanguineo, alergia, uso_ilicito, uso_medicamento):
        self._tipo_sanguineo = tipo_sanguineo
        self._alergia = alergia
        self._uso_ilicito = uso_ilicito
        self._uso_medicamento = uso_medicamento