class Exames:
    def _init_(self, tempo_jejum, tipo_exame, horario, sala, observacao, laboratorio):
        self._tempo_jejum = tempo_jejum
        self._tipo_exame = tipo_exame
        self._horario = horario
        self._sala = sala
        self._observacao = observacao
        self._laboratorio = laboratorio