class Laboratorio:
    def _init_(self, nome_laboratorio, endereco_laboratorio, cnpj, telefone_laboratorio, profissional):
        self._nome_laboratorio = nome_laboratorio
        self._endereco_laboratorio = endereco_laboratorio
        self._cnpj = cnpj
        self._telefone_laboratorio = telefone_laboratorio
        self._profissional = profissional