class Observacao:
    def _init_(self, risco_exame, triagem, equipamento, medicamento):
        self._risco_exame = risco_exame
        self._triagem = triagem
        self._equipamento = equipamento
        self._medicamento = medicamento