class Profissional:
    def _init_(self, nome_profissional, cargo, registro_profissional, assinatura):
        self._nome_profissional = nome_profissional
        self._cargo = cargo
        self._registro_profissional = registro_profissional
        self._assinatura = assinatura